(style): ja echt bijna klaar hoop ik

--- a/index.html
+++ b/index.html
@@ -296,55 +296,27 @@
         <ol class="list-normal-font">
           <li>
             <span class="delirium-font"> Decoratieve krullen:</span> Het
-            Delirium-font bevat vaak sierlijke krullen en versieringen die de
-            letters verfraaien en een artistieke uitstraling geven.
-          </li>
-          <li>
-            <span class="delirium-font">Complexiteit:</span> Het lettertype is
-            vaak complex en gedetailleerd, met veel decoratieve elementen en
-            ornamenten.
+            Delirium-font bevat sierlijke krullen en versieringen die de letters
+            een artistieke uitstraling geven.
           </li>
           <li>
             <span class="delirium-font">Hoog contrast:</span> Het Delirium-font
-            vertoont doorgaans een hoog contrast tussen dikke en dunne lijnen in
-            de letters, wat zorgt voor een dramatisch effect.
+            heeft een hoog contrast tussen dikke en dunne lijnen in de letters,
+            wat zorgt voor een dramatisch effect.
           </li>
           <li>
-            <span class="delirium-font">Organische vormen:</span> Het kan
-            gebruikmaken van organische en gebogen vormen die lijken op
-            natuurlijke elementen zoals bladeren, bloemen of wijnranken.
+            <span class="delirium-font">Organische vormen:</span> De organische
+            en gebogen vormen lijken op natuurlijke elementen.
           </li>
           <li>
-            <span class="delirium-font">Asymmetrie:</span> Het lettertype kan
-            asymmetrische elementen bevatten, waardoor het een kunstzinnig en
-            uniek uiterlijk krijgt.
-          </li>
-          <li>
-            <span class="delirium-font">Art Nouveau-invloeden:</span> Het
-            Delirium-font kan elementen van de Art Nouveau-stijl bevatten, zoals
-            gestileerde bloemen en organische vormen.
-          </li>
-          <li>
-            <span class="delirium-font">Creatieve lettervormen:</span> Het
-            lettertype kan creatieve en unieke lettervormen gebruiken, die zich
-            onderscheiden van meer traditionele lettertypen.
-          </li>
-          <li>
-            <span class="delirium-font">Ornamentatie:</span> Het is vaak rijk
+            <span class="delirium-font">Ornamentatie:</span> Het font is rijk
             aan ornamentatie en decoratieve details, waardoor het geschikt is
             voor artistieke en decoratieve doeleinden.
           </li>
           <li>
             <span class="delirium-font">Vloeiende lijnen:</span> Het
-            Delirium-font maakt vaak gebruik van golvende en vloeiende lijnen om
-            een gevoel van beweging en elegantie te creëren.
-          </li>
-          <li>
-            <span class="delirium-font">Eigentijdse interpretatie:</span> Het is
-            belangrijk op te merken dat het Delirium-font een eigentijdse
-            interpretatie is van decoratieve lettertypen en kan digitale
-            ontwerpelementen bevatten die niet aanwezig waren in historische
-            stijlen.
+            Delirium-font maakt gebruik van golvende en vloeiende lijnen om een
+            gevoel van beweging en elegantie te creëren.
           </li>
         </ol>
       </section>
@@ -405,6 +377,39 @@
             </section>
           </li>
         </ul>
+      </section>
+
+      <section class="bronvermelding">
+        <h2>Bronvermelding</h2>
+        <a
+          href="https://creativemarket.com/blog/all-you-ever-wanted-to-know-about-psychedelic-fonts-in-design"
+          >reativemarket.com</a
+        >
+        <a
+          href="https://fontsinuse.com/uses/49220/obliques-14-15-la-femme-surrealiste"
+          >fontsinuse.com</a
+        >
+        <a
+          href="https://fontsinuse.com/uses/29355/new-york-magazine-nov-11-2019-the-weirdness-i"
+          >fontsinuse.com</a
+        >
+        <a
+          href="https://fontsinuse.com/uses/34341/nektar-remember-the-future-album-art"
+          >fontsinuse.com</a
+        >
+        <a
+          href="https://fontsinuse.com/uses/54482/nektar-the-other-side-album-art"
+          >fontsinuse.com</a
+        >
+        <a href="https://www.delirium.be/nl">delirium.be</a>
+        <a href="https://www.fontspace.com/ringlet-font-f4303">fontspace.com</a>
+        <a href="https://www.onlineprinters.nl/blog/oude-lettertypes/"
+          >onlineprinters.nl</a
+        >
+        <a
+          href="https://www.creativosonline.org/nl/tipografias-manuscritas.html"
+          >creativosonline.org</a
+        >
       </section>
 
       <div class="cursor-dot-outline"></div>
