(style): final fixes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
     <main>
       <h1 class="sr-only">Delirium typografie publicatie</h1>
-      <button class="trip-button"></button>
+      <button class="trip-button">
+        <img src="img/logo-delirum.svg" alt="" />
+      </button>
 
       <section id="intro">
         <section>
